All styles moved to proper stylesheets

--- a/demo_views/poster.ejs
+++ b/demo_views/poster.ejs
@@ -16,12 +16,5 @@
   </div>
   </body>
 
-  <style>
-    .jumbotron {
-      color: black;
-    }
-    h1, h3 {
-      text-align: center;
-    }
-  </style>
+<link rel="stylesheet" href="/css/poster.css">
 </html>
