--- a/demo_views/finishedPoster.ejs
+++ b/demo_views/finishedPoster.ejs
@@ -29,19 +29,7 @@
   var fs = require("fs");
 </script>
 
-<style>
-	h1.text-center {
-		margin-top: 100px;
-		font-size: 65px;
-		color: black;
-		margin: 30px 0px 30px 0px;
-	}
-	h1 {
-		margin-top: 300px;
-		color: #fff;
-		font-size: 60px;
-	}
-</style>
+<link rel="stylesheet" href="/css/finishedPoster.css">
 
 </body>
 </html>
