Moved all scripts to individual files

--- a/demo_views/pituus.ejs
+++ b/demo_views/pituus.ejs
@@ -34,74 +34,8 @@
 	</div>
 </center>
 
-<script>
-var electron = require("electron");
-var fs = require("fs");
-var remote = electron.remote;
-var index = remote.require("./index.js");
-var measumentEnded = index.measumentEnded;
-var exec = require('child_process').exec;
+<script src="/js/inProcessPoster.js"></script>
 
-function editData() {
-  exec("/home/kuutio/Työpöytä/electron_demo/scripts/edit_data",function (error, stdout, stderr) {
-  console.log('stdout: ' + stdout);
-  console.log('stderr: ' + stderr);
-  if (error !== null) {
-    console.log('exec error: ' + error);
-    }
-  });
-};
-// check if the file exists asyncronously:
-setInterval( function() {
-  //editData();
-  fs.stat('/home/kuutio/mittauskuutio/all_data.txt', (error, file) => {
-        if (!error && file.isFile()) {
-          fs.readFile('/home/kuutio/mittauskuutio/all_data.txt', 'utf8', function (err, data) {
-            if (err) {
-              return console.log(err);
-            }
-            window.location = "http://127.0.0.1:3000/results";
-            measumentEnded();
-          });
-        }
-        if (error && error.code === 'ENOENT') {
-          //return resolve(false);
-        }
-      });
-}, 5000);
-</script>
-
-<style>
-  body {
-    height: 990px;
-  }
-  .container {
-    width: 86%;
-    height: 90%;
-    /*margin: 2% 0 2% 2%;*/
-    margin: 3% auto;
-  }
-   ol  {
-     padding-top: 10%;
-     width: 100%;
-     height: 900px;
-   }
-  ol li {
-    font-size: 40px;
-    font-weight: bold;
-    height: 11%;
-    text-align: left;
-    line-height: normal;
-  }
-  img {
-    height: 79%;
-  }
-  .image-instr {
-      width: 25%;
-  }
-  div.row {
-    height: 950px;
-  }
-</style>
+<link rel="stylesheet" href="/css/inProcessPoster.css">
 </body>
 </html>
