--- a/demo_views/basicInfo.ejs
+++ b/demo_views/basicInfo.ejs
@@ -10,11 +10,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<link href="/Metro-UI-CSS-master/build/css/metro.css" rel="stylesheet">
 	<link href="/Metro-UI-CSS-master/build/css/metro-icons.css" rel="stylesheet">
-<<<<<<< Updated upstream
-	
-=======
-
->>>>>>> Stashed changes
 	<link href="/css/styles.css" rel="stylesheet">
 	
 </head>
@@ -46,16 +41,11 @@
 		</div>
 		<button><a href="/selectDevices"> Debug seuraava</a></button>
 	</form>
-<<<<<<< Updated upstream
 	
-=======
->>>>>>> Stashed changes
-	<link href="/css/basicInfo.css" rel="stylesheet">
 
 	<script src="/Metro-UI-CSS-master/build/js/metro.js"></script>
-	
-	<script src="/js/basicInfo.js">
-	</script>
+	<link href="/css/basicinfo.css" rel="stylesheet">
+	<script src="/js/basicInfo.js">	</script>
 </body>
 
 </html>
