--- a/demo_views/home_ENG.ejs
+++ b/demo_views/home_ENG.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tervetuloa Mittauskuutioon</title>
+	<title>Welcome to Qube Measuring Enviroment</title>
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -14,18 +14,14 @@
 
 <body id="grad">
 	<div class="jumbotron">
-		<h1 class="text-center"style="margin: 30px 0px 30px 0px; color: black;">Valitse jatkotoimenpiteet</h1>
+		<h1 class="text-center"style="margin: 30px 0px 30px 0px; color: black;">Welcome to Qube Measuring Enviroment</h1>
 	</div>
 	<div class="container text-center">
 		<div class="stanewmeas">
-		<button type="button" class="button yellowButton" role="button" id="homepage"><a href="/">Etusivulle</a>
-		<button type="button" class="button yellowButton" role="button" id="printResults"><p>Tulosta</br>tulokset ja etusivulle</p>
+		<button type = "button" class="button yellowButton"
+		   role="button" id="reset"><a href="/basicinfo">Start new <br> measurement</a>
 		</div>
 	</div>
-
-	<script src="/js/finished.js"></script>
-	<link href="/css/finished.css" rel="stylesheet">
-
 
 </body>
 </html>
