--- a/demo_views/results_ENG.ejs
+++ b/demo_views/results_ENG.ejs
@@ -10,7 +10,7 @@
 
 <body id="grad">
 	<div class="jumbotron">
-		<h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Tulokset</h1>
+		<h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Results</h1>
 	</div>
 
 <div class="tile-area">
@@ -24,7 +24,7 @@
 		<div class="tile-square bg-orange" id="BMI" data-role="tile"></div>
 		<div class="tile-square bg-violet" id="weight" data-role="tile"></div>
 	</div>
-	<h1>Tulokset näkyvät 15 sekuntia.</h1>
+	<h1>Results will be shown for 15 seconds</h1>
 </div>
 </div>
 </body>
