Fixed typo that causes Linux css crash

--- a/demo_views/basicInfo.ejs
+++ b/demo_views/basicInfo.ejs
@@ -44,7 +44,7 @@
 	
 
 	<script src="/Metro-UI-CSS-master/build/js/metro.js"></script>
-	<link href="/css/basicinfo.css" rel="stylesheet">
+	<link href="/css/basicInfo.css" rel="stylesheet">
 	<script src="/js/basicInfo.js">	</script>
 </body>
 
