Added external putty log read function to be implemented Fixed CSS crash causing typo on home.ejs

--- a/demo_views/home.ejs
+++ b/demo_views/home.ejs
@@ -19,7 +19,7 @@
 	<div class="container text-center">
 		<div class="stanewmeas">
 		<button type = "button" class="button yellowButton"
-		   role="button" id="reset"><a href="/basicinfo">Aloita uusi <br> mittaus</a>
+		   role="button" id="reset"><a href="/basicInfo">Aloita uusi <br> mittaus</a>
 		</div>
 	</div>
 
