--- a/public/css/results_new.css
+++ b/public/css/results_new.css
@@ -1,10 +1,54 @@
 /* Style the header */
-.header {
+.header2 {
     padding: 50px;
     text-align: center;
     align-content: center;
-    height: 30%;
+    height: 25%;
 }
-.header p {
+.header2 p {
     display: inline-block;
+    background-color: lightblue;
+    border: thick solid turquoise;
+    text-align: center; 
+    padding: 0.8%;
+    margin: 1%;
+    font-size: 1.5em;
+    font: bold;
 }
+
+/* A narrow column that can be used as margin for results element*/
+.sideMargin {
+    float: left;
+    width: 5%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#resultsTitle { 
+    text-align: center;
+    padding: 1%;
+}
+
+#results {
+    float: left;
+    padding: 1%;
+    width: 90%;    
+}
+
+#results p {
+    float: left;
+    width: 18%;
+    background-color: rgb(255, 235, 122);
+    border: thick solid peru;
+    text-align: center; 
+    padding: 0.8%;
+    margin: 1%;
+    font-size: 1.2em;
+
+}
+
