Added body figures, continued to work on the result screen.

--- a/demo_views/results_new.ejs
+++ b/demo_views/results_new.ejs
@@ -21,14 +21,21 @@
 		<h2>General info:</h2>
 	</div>
 	<div id="resultsTitle"><h2>Measurement results:</h2></div>
-	<div class="sideMargin"></br></div>
+	<div class="sideMargin"></br></div>	<!-- Margin on the left side of results -->
 	<div id="results">
-		
+		<!-- Do not add any elements in here manually
+			All elements are cleared when the result are printed -->
 	</div>
-	<div class="sideMargin"></br></div>
+</br>
+	<div class="sideMargin"></br></div> <!-- Margin on the right side of results -->
+	<div class="sideMargin"></br></div> <!-- Margin on the left side of images -->
+	<div id="bodyPictures" style="display: none">
+			<img src="/images/man_shadow4.png" alt="Body">
+			<img src="/images/Female_shadow3.png" alt="FBody">
+	</div>
+	<div class="sideMargin"></br></div> <!-- Margin on the right side of images -->
 	
 	<script src="/js/results.js"></script>
-
 	
 </body>
 
