--- a/public/css/results_new.css
+++ b/public/css/results_new.css
@@ -20,6 +20,7 @@
 .sideMargin {
     float: left;
     width: 5%;
+    background-color: black;
 }
 
 /* Clear floats after the columns */
@@ -49,6 +50,9 @@
     padding: 0.8%;
     margin: 1%;
     font-size: 1.2em;
+}
 
+#bodyPictures {
+    float: left;
 }
 
