Finished results screen, body figures will be added on other page Renamed some result descriptions (bmi --> body mass index etc.)

--- a/public/css/results_new.css
+++ b/public/css/results_new.css
@@ -1,9 +1,10 @@
 /* Style the header */
 .header2 {
-    padding: 50px;
+    padding: 1.5%;
     text-align: center;
     align-content: center;
-    height: 25%;
+    /* height: 25%; */
+    background-color: red;
 }
 .header2 p {
     display: inline-block;
