--- a/demo_views/results_new.ejs
+++ b/demo_views/results_new.ejs
@@ -4,37 +4,40 @@
 <head>
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
 	<link href="/css/styles.css" rel="stylesheet">
-	<link href="/css/results_new.css" rel="stylesheet">
+	<link href="/css/results_new_gridlayout.css" rel="stylesheet">
 	<link href="/Metro-UI-CSS-master/build/css/metro.css" rel="stylesheet">
 	<link href="/Metro-UI-CSS-master/build/css/metro-icons.css" rel="stylesheet">
 </head>
 
 <body id="grad">
 	<div class="jumbotron">
-        <h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Tulokset</h1>
-		<button type="button" onclick="resultSelector('basic')">Show basic results</button>
-		<button type="button" onclick="resultSelector('extensive')">Show extensive results</button>
+        <h1 class="text-center" style="font-size: 5.5em; margin: 20px 0px 20px 0px; color: black;">Tulokset</h1>
 	</div>
-
-	<!-- Results are appended into these divs in results.js -->
-	<div class="header2" id="resultsHeader">
-		<h2>General info:</h2>
+	<div class="gridWrapper">
+		<div class="resultButtons">
+			
+		</div>
+		<!-- Results are appended into these divs in results.js -->
+		<div class="header2" id="resultsHeader">
+			<button id="basicsButton" type="button" onclick="resultSelector('basic')">Show basic results</button>
+			<button id="extensivesButton" type="button" onclick="resultSelector('extensive')">Show extensive results</button>
+			<button id="limbsButton" type="button">Show limb data</button>	<!-- FUNCTIONALITY NOT IMPLEMENTED YET -->
+		<!--	Result header is printed here in results.js
+				Data such as date, time and gender -->
+		</div>
+		<div class="sideMarginLeft"></div>	<!-- Margin on the left side of results -->
+		<div id="results">
+			<!-- Do not add any elements in here manually
+				All elements are cleared when the result are printed -->
+		</div>
+	</br>
+		<div class="sideMarginRight"></div> <!-- Margin on the right side of results -->
+		<div id="bodyPictures" style="display: none">
+				<img src="/images/man_shadow4.png" alt="Body">
+				<img src="/images/Female_shadow3.png" alt="FBody">
+		</div>
+		<div class="sideMargin"></br></div> <!-- Margin on the right side of images -->
 	</div>
-	<div id="resultsTitle"><h2>Measurement results:</h2></div>
-	<div class="sideMargin"></br></div>	<!-- Margin on the left side of results -->
-	<div id="results">
-		<!-- Do not add any elements in here manually
-			All elements are cleared when the result are printed -->
-	</div>
-</br>
-	<div class="sideMargin"></br></div> <!-- Margin on the right side of results -->
-	<div class="sideMargin"></br></div> <!-- Margin on the left side of images -->
-	<div id="bodyPictures" style="display: none">
-			<img src="/images/man_shadow4.png" alt="Body">
-			<img src="/images/Female_shadow3.png" alt="FBody">
-	</div>
-	<div class="sideMargin"></br></div> <!-- Margin on the right side of images -->
-	
 	<script src="/js/results.js"></script>
 	
 </body>
