--- a/public/css/results_new_gridlayout.css
+++ b/public/css/results_new_gridlayout.css
@@ -1,32 +1,24 @@
 .gridWrapper 
 {
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
 }
 
 .sideMarginLeft
 {
-    /*grid-column-start: 1;
-    grid-column-end: 4;*/
-    grid-column: 1 / 4;
-    
-    grid-row: 1 / 7;
+    grid-column: 1;
+    grid-row: 1 / 5;
 }
 
 .sideMarginRight
 {
-    grid-column: 14 / 17;
-    grid-row: 1 / 7;
+    grid-column: 5;
+    grid-row: 1 / 5;
 }
 
-/* .resultButtons
+#basicsButton, #extensivesButton, #limbsButton 
 {
-    grid-row: 1;
-    grid-column: 4 / 14;
-} */
-
-#basicsButton, #extensivesButton, #limbsButton {
     width: 31%;
     margin: 1%;
     display: inline-block;
@@ -34,11 +26,12 @@
     padding: 1%;
     font: bold;
     border-radius: 12px;
+    font-size: 1.2em;
 }
 
 #resultsHeader
 {
-    grid-column: 4 / 14;
+    grid-column: 2 / 5;
     grid-row: 1;
     padding: 1.5%;
     text-align: center;
@@ -47,13 +40,12 @@
 
 #results 
 {
-    grid-column: 4 / 14;
-    grid-row: 2 / 7;
+    grid-column: 2 / 5;
+    grid-row: 2 / 5;
 }
 
 #results p {
-   /* float: left;*/
-     width: 31.7%; 
+    width: 31.7%; 
     display: inline-block; 
     background-color: rgb(255, 235, 122);
     border: thick solid peru;
@@ -75,4 +67,21 @@
     font-size: 1.5em;
     font: bold;
     border-radius: 15px;
+}
+
+.exitArea
+{
+    grid-column: 5;
+    grid-row: 4;
+}
+
+#exitButton
+{
+    display: inline-block;
+    padding: 3%;
+    border-radius: 15px;
+    text-align: center;
+    width: 50%;
+    margin-left: 10%;
+    font-size: 1.2em;
 }
