Removed styles from all .ejs file jumbotrons and moved them to CSS file

--- a/demo_views/basicInfo_ENG.ejs
+++ b/demo_views/basicInfo_ENG.ejs
@@ -15,7 +15,7 @@
 
 <body id="grad">
 	<div class="jumbotron">
-		<h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Give your basic info</h1>
+		<h1 class="text-center">Give your basic info</h1>
 	</div>
 
 	<form data-role="validator" class="container userData" data-on-submit="return false">
