--- a/demo_views/finished_ENG.ejs
+++ b/demo_views/finished_ENG.ejs
@@ -14,7 +14,7 @@
 
 <body id="grad">
 	<div class="jumbotron">
-		<h1 class="text-center"style="margin: 30px 0px 30px 0px; color: black;">Continue</h1>
+		<h1 class="text-center">Continue</h1>
 	</div>
 	<div class="container text-center">
 		<div class="stanewmeas">
