--- a/demo_views/results_new.ejs
+++ b/demo_views/results_new.ejs
@@ -11,7 +11,7 @@
 
 <body id="grad">
 	<div class="jumbotron">
-        <h1 class="text-center" style="font-size: 5.5em; margin: 20px 0px 20px 0px; color: black;">Tulokset</h1>
+        <h1 class="text-center">Tulokset</h1>
 	</div>
 	<div class="gridWrapper">
 		<!-- Results are appended into these divs in results.js -->
