--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -162,6 +162,9 @@ h3 {
 	border-bottom: 5px solid #3C4145;
 	font-weight: bold;
   width: 100%;
+  font-size: 5.5em; 
+  margin: 30px 0px 30px 0px; 
+  color: black;
 }
 
 .homeOptions {
