--- a/demo_views/basicInfo.ejs
+++ b/demo_views/basicInfo.ejs
@@ -15,7 +15,7 @@
 
 <body id="grad">
 	<div class="jumbotron">
-		<h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Anna perustietosi</h1>
+		<h1 class="text-center">Anna perustietosi</h1>
 	</div>
 
 	<form data-role="validator" class="container userData" data-on-submit="return false">
