--- a/demo_views/inprocess_ENG.ejs
+++ b/demo_views/inprocess_ENG.ejs
@@ -17,7 +17,7 @@
 
 <body id="grad">
   <div class="jumbotron">
-    <h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Measurement running...</h1>
+    <h1 class="text-center">Measurement running...</h1>
   </div>
   <div class="container text-center">
     <div class="intept">
