--- a/demo_views/select_ENG.ejs
+++ b/demo_views/select_ENG.ejs
@@ -13,7 +13,7 @@
 <body id="grad">
 
 	<div class="jumbotron">
-		<h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Choose the measruments you want to perform.</h1>
+		<h1 class="text-center">Choose the measruments you want to perform.</h1>
 	</div>
 
 <div class="tile-area">
