Added return to home functionality to exit button

--- a/demo_views/results_new.ejs
+++ b/demo_views/results_new.ejs
@@ -29,7 +29,7 @@
 		</div>
 		<div class="sideMarginRight"></div> <!-- Margin on the right side of results -->
 		<div class="exitArea">
-				<button id="exitButton" type="button">Exit</button>
+				<button id="exitButton" type="button" onclick="goHome()">Exit</button>
 			</div>
 		<div id="bodyPictures" style="display: none">
 				<img src="/images/man_shadow4.png" alt="Body">
