--- a/demo_views/home.ejs
+++ b/demo_views/home.ejs
@@ -15,14 +15,29 @@
 <body id="grad">
 	<div class="jumbotron">
 		<h1 class="text-center"style="margin: 30px 0px 30px 0px; color: black;">Tervetuloa Mittauskuutioon</h1>
+    <h2 class="text-center"style="margin: 30px 0px 30px 0px; color: black;">Valitse kieli/Choose your language</h2>
+    
 	</div>
 	<div class="container text-center">
 		<div class="stanewmeas">
-		<button type = "button" class="button yellowButton"
-		   role="button" id="reset"><a href="/basicInfo">Aloita uusi <br> mittaus</a>
-		</div>
+			<!--
+				<a href="/basicInfo" id="finnish" class="button"></a>
+
+				<a href="/basicInfo_ENG" id="english" class="button"></a>
+			-->
+
+			<form action="selectLanguage" method="POST">
+				<button type="submit" name="language" value="fi" class="lang-select">Suomi</button>
+			</form>
+			
+			<form action="selectLanguage" method="POST">
+				<button type="submit" name="language" value="en" class="lang-select">English</button>
+			</form>
+
+    	</div>
 	</div>
 
+	<link href="/css/home.css" rel="stylesheet">
 
 </body>
 </html>
