--- a/demo_views/finished.ejs
+++ b/demo_views/finished.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+<% text %>
+
 <head>
-	<title>Tervetuloa Mittauskuutioon</title>
+	<title><%= text.title %></title>
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -14,12 +17,12 @@
 
 <body id="grad">
 	<div class="jumbotron">
-		<h1 class="text-center"style="margin: 30px 0px 30px 0px; color: black;">Valitse jatkotoimenpiteet</h1>
+		<h1 class="text-center"style="margin: 30px 0px 30px 0px; color: black;"><%= text.select %></h1>
 	</div>
 	<div class="container text-center">
 		<div class="stanewmeas">
-		<button type="button" class="button yellowButton" role="button" id="homepage"><a href="/">Etusivulle</a>
-		<button type="button" class="button yellowButton" role="button" id="printResults"><p>Tulosta</br>tulokset ja etusivulle</p>
+		<button type="button" class="button yellowButton" role="button" id="homepage"><a href="/"><%= text.frontpage %></a>
+		<button type="button" class="button yellowButton" role="button" id="printResults"><p><%= text.print %></p>
 		</div>
 	</div>
 
