--- a/demo_views/inprocess.ejs
+++ b/demo_views/inprocess.ejs
@@ -2,8 +2,10 @@
 <meta charset="UTF-8">
 <html>
 
+<% text %>
+
 <head>
-  <title>Mittaus käynnissä...</title>
+  <title><%= text.title %>></title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
@@ -17,13 +19,13 @@
 
 <body id="grad">
   <div class="jumbotron">
-    <h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Mittaus käynnissä...</h1>
+    <h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;"><%= text.title %></h1>
   </div>
   <div class="container text-center">
     <div class="intept">
           <div class="loader"></div>
-          <h2 style="font: normal 36px roboto; margin: 50px 0 150px 0; color: #fff">Mittausohjeet toisella näytöllä</h2>
-          <a type="button" id="cancel" class="back"> Keskeytä</a>
+          <h2 style="font: normal 36px roboto; margin: 50px 0 150px 0; color: #fff"><%= text.instructions %></h2>
+          <a type="button" id="cancel" class="back"><%= text.cancel %></a>
       <!--<div class="loader"></div>-->
     </div>
   </div>
