--- a/demo_views/select.ejs
+++ b/demo_views/select.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<% text %>
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -12,34 +12,37 @@
 
 <body id="grad">
 
+
+
 	<div class="jumbotron">
-		<h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;">Valitse suoritettavat mittaukset</h1>
+		<h1 class="text-center" style="font-size: 5.5em; margin: 30px 0px 30px 0px; color: black;"><%= text.title %></h1>
 	</div>
 
 <div class="tile-area">
 <div class="tile-container tile-container-one">
 			<div class="tile tile-wide-x" data-role="tile">
 				<div class="tile-content bg-yellow">
-					<a href="/basicinfo" role="button"><span class="mif-arrow-left"></span> Takaisin</a>
+					<a href="/basicinfo" role="button"><span class="mif-arrow-left"></span><%= text.back %></a>
 				</div>
 			</div>
 
 			<div class="tile-square bg-inactive-red" data-role="tile">
-					<p>Pituus</p>
+					<p><%= text.back %></p>
 			</div>
 			<div class="tile-square bg-inactive-orange" data-role="tile">
-				<p>Paino</p>
+				<p><%= text.weight %></p>
 			</div>
 			<div class="tile-large image1" data-role="tile">
 			</div>
 			<div class="tile-square bg-violet" id="violet" data-role="tile" style="padding-top:55px;">
-				<p>Kehon -<br>koostumus</p>
+				<!--<p>Kehon -<br>koostumus</p>-->
+				<p><%= text.bodycomposition %></p>
 			</div>
 			<div class="tile-square bg-inactive-blue" data-role="tile">
-				<p>Verenpaine</p>
+				<p><%= text.bloodpressure %></p>
 			</div>
 			<div type="button" class="tile tile-wide-x selectAll disabled bg-lightRed" id="toggle-btn" onclick="deselectAll">
-				<p>Valitse kaikki</p>
+				<p><%= text.selectall %></p>
 			</div>
 		</div>
 
@@ -47,7 +50,7 @@
 			<div class="tile-large image2" data-role="tile">
 			</div>
 			<div class="tile tile-wide-x bg-green tile-seuraava">
-				<a href="/measurementsInProcess" class="absolute disabled" id="seuraava" role="button">Seuraava <span class="mif-arrow-right"></span></a>
+				<a href="/measurementsInProcess" class="absolute disabled" id="seuraava" role="button"><%= text.next %> <span class="mif-arrow-right"></span></a>
 			</div>
 		</div>
 	</div>
