Fix language control system

--- a/demo_views/results_new.ejs
+++ b/demo_views/results_new.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
 	<link href="/css/styles.css" rel="stylesheet">
@@ -37,7 +36,6 @@
 		</div>
 		<div class="sideMargin"></br></div> <!-- Margin on the right side of images -->
 	</div>
-	<script src="/js/results.js"></script>
 
 
 <!-- Trigger the modal with a button -->
@@ -64,9 +62,6 @@
 </div>
 <!-- Modal definition end -->
 
-</body>
-
-</html>
 <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
 
 <script src="/jquery/dist/jquery.min.js"></script>
@@ -74,8 +69,12 @@
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/Metro-UI-CSS-master/build/js/metro.js"></script>
 <script src="/js/script.js"></script>
+<script data-language=<%= lang %> src="/js/results.js"></script>
+
 
 <script>if (window.module) module = window.module;</script>
 
+</body>
 
+</html>
  
