Added initial page for blood pressure measurement and language controls for it

--- a/demo_views/select.ejs
+++ b/demo_views/select.ejs
@@ -38,8 +38,7 @@
 				<!--<p>Kehon -<br>koostumus</p>-->
 				<p><%= text.bodycomposition %></p>
 			</div>
-			<div class="tile-square bg-inactive-blue" data-role="tile">
-				<p><%= text.bloodpressure %></p>
+				<a href="/bloodPressure" role="button"><%= text.bloodpressure %></a>
 			</div>
 			<div type="button" class="tile tile-wide-x selectAll disabled bg-lightRed" id="toggle-btn" onclick="deselectAll">
 				<p><%= text.selectall %></p>
