--- a/demo_views/results.ejs
+++ b/demo_views/results.ejs
@@ -65,6 +65,8 @@
 </div>
 <!-- Modal definition end -->
 
+<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/jquery-ui/jquery-ui.min.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
