--- a/public/css/results.css
+++ b/public/css/results.css
@@ -8,13 +8,13 @@
 .sideMarginLeft
 {
     grid-column: 1;
-    grid-row: 1 / 5;
+    grid-row: 1 / -1;
 }
 
 .sideMarginRight
 {
     grid-column: 5;
-    grid-row: 1 / 5;
+    grid-row: 1 / -1;
 }
 
 #basicsButton, #extensivesButton, #limbsButton 
@@ -31,7 +31,7 @@
 
 #resultsHeader
 {
-    grid-column: 2 / 5;
+    grid-column: 2 / -1;
     grid-row: 1;
     padding: 1.5%;
     text-align: center;
@@ -40,8 +40,8 @@
 
 #results 
 {
-    grid-column: 2 / 5;
-    grid-row: 2 / 5;
+    grid-column: 2 / -1;
+    grid-row: 2 / -1;
 }
 
 #results p {
@@ -71,7 +71,7 @@
 
 .exitArea
 {
-    grid-column: 5;
+    grid-column: -1;
     grid-row: 3 / 4;
 }
 
@@ -84,4 +84,9 @@
     width: 50%;
     margin-left: 10%;
     font-size: 1.2em;
+}
+
+#bodyPictures
+{
+    display: inline;
 }
